# Draw-A-Spell

./: .env.production  .gitignore  IMAGE_ASSETS_NOTE.md  capacitor.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
android/app/: build.gradle
decks/: adventurePrecons.ts  decks.ts
docs/: image-delivery-guide.md  vita-vpk.md
ios.spm.backup/App/App/: Info.plist
ios.spm.backup/App/App.xcodeproj/: project.pbxproj
ios/App/: Podfile
ios/App/App/: Info.plist
ios/App/App.xcodeproj/: project.pbxproj
json/: cards.sorcery.names.csv  cards.sorcery.raw.json  cards.sorcery.required_image_slugs.txt
public/: _headers  cards.sorcery.pool.json  sorcery_codex.csv
public/assets/Images/: README.md
scripts/: build-vita-vpk.sh  generate-vita-art.mjs  generate-vita-data.mjs  prepare-cf-assets.mjs  prune-cf-app-assets.mjs  release-vita-vpk.sh
server/: package-lock.json  package.json  ws.js
src/: App.tsx  aura.helpers.ts  curiosaImport.ts  main.tsx
src/abilities/: adapter.ts  avatars.ts  impl.generated.ts  spells.impl.generated.ts  spells.ts
src/ai/: aiRuntime.ts  index.ts  rulesAdapter.ts  simpleRulesAdapter.ts  sorceryRulesAdapter.ts  types.ts
src/ai/carddb/: CardDB.ts  CardTags.ts
src/ai/cpu/: ActionScorer.ts  BasicCPU.ts  StateEvaluator.ts
src/ai/profiles/: AggroProfile.ts  ControlProfile.ts  RampProfile.ts  index.ts
src/brewing/: computeDeckStats.ts  simulateDraws.ts  suggest.ts
src/net/: mpClient.ts  mpTypes.ts
src/ui/: motion.ts
src/ui/layout/: AppShell.tsx  PhonePortraitLayout.tsx  PortraitLayoutShell.module.css  PortraitLayoutShell.tsx  TabletLandscapeLayout.tsx  useViewport.ts
src/ui/presentation/: ActionBar.tsx  BoardView.tsx  CardInspectorBottomSheet.module.css  CardInspectorBottomSheet.tsx  (+6 more)
tmp/pdfs/: generate_app_summary_pdf.py
vita/: CMakeLists.txt
vita/data/: art-report.txt  card-art.csv  cards.csv  decks.csv  generation-report.txt
vita/sce_sys/livearea/contents/: template.xml
vita/src/: card_db.c  card_db.h  game_core.c  game_core.h  input.c  input.h  main.c  render.c  render.h  save_state.c  save_state.h
worker/ws/: wrangler.toml
(+4 files in other folders)
